# gst-plugin-vamp

./: .gitignore  AUTHORS  README  configure.ac
src/: Makefile.am  gstvamp.c  gstvamp.cpp  gstvamp.h  vamp-host.cpp  vamp-host.h
